<resources>
    <string name="google_maps_key">AIzaSyC4Lxx7X4I6GQNeN1RlYpnk-7yvFiy-RaE</string>
    <string name="map_box_access_token" templateMergeStrategy="preserve">pk.eyJ1IjoiamVyZW15cmljYXJkIiwiYSI6ImNrMTk4dnJtdjF6aDczcHRrZ250bTh0YmoifQ.nOLWdq-JtlSl62lncP6IpQ</string>
    <string name="label_show">Show</string>
    <string name="label_hide">Hide</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_mobilenumber">Mobile number</string>
    <string name="hint_emailaddress">email@address.com</string>
    <string name="hint_enter_code">Enter code</string>
    <string name="label_resend_code">RESEND CODE</string>
    <string name="error_confirmation_code">Invalid confirmation code</string>
    <string name="onboarding_forgot_password_button">Forgot Password</string>
    <string name="onboarding_forgot_password_title">Forgot your password? </string>
    <string name="label_forgot_password_reset">Reset your password</string>
    <string name="label_forgot_password_reset_button">Reset Password</string>
    <string name="label_problem">There was a problem</string>
    <string name="label_enter_valid_email_address">Please enter a valid email address.</string>
    <string name="password_must_be">Password must be between 8 - 16 characters long.</string>
    <string name="please_try_again">Please try again</string>
    <string name="label_forgot_password_error_title">There was a problem</string>
    <string name="label_forgot_password_error_sub_title1">No account exists for the requested email address</string>
    <string name="alert_forgetpassword_error_title">Password Changing Error</string>
    <string name="alert_forgetpassword_error_message">Sorry, we are unable to change your password. Please try again.</string>
    <string name="alert_forgetpassword_success_message">You password has been successfully changed!</string>
    <string name="onboarding_forgot_password_subtitle">Enter your email to find your account.</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="onboarding_sign_up_title">Sign up</string>
    <string name="find_rite_terms_title">TERMS AND CONDITIONS</string>
    <string name="action_profile_settings">Profile and Settings</string>
    <string name="profile_settings">Profile &amp; Settings</string>
    <string name="action_emergency_contacts">Emergency Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_login_out">Logout</string>
    <string name="onboarding_log_in_button">LOG IN</string>
    <string name="onboarding_log_in_title">Log in</string>
    <string name="action_next">Next</string>
    <string name="delete_description">Are you sure you wish to delete your account? Once deleted, all previous history will be lost. This cannot be undone.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobilenumber">Phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="personal_details">PERSONAL INFO</string>
    <string name="private_network">PRIVATE NETWORK</string>
    <string name="private_network_content">You don\'t have access to any private networks.</string>
    <string name="private_network_content_has_fleets">You currently have access to no new private networks.</string>
    <string name="add_private_network">Add a private network</string>
    <string name="add_another_private_network">Add another</string>
    <string name="enter_your_new_phone_number">Enter your new phone number</string>
    <string name="success">Success</string>
    <string name="security">SECURITY</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="email_lowercase">email</string>
    <string name="help_info"><![CDATA[<font color=#80848C>For any issues please contact support at </font><font color=#213BBD>%1$s</font>]]></string>
    <string name="text_verIfication_code">SEND VERIFICATION CODE</string>
    <string name="onboarding_verify_email">Verify Email</string>
    <string name="onboarding_verificaiotn_title">We\'ve sent a verification code to the email listed during sign up.</string>
    <string name="onboarding_verification_subtitle">Please enter the code below</string>
    <string name="label_verify_email_incorrect_code">Incorrect code. Please try again.</string>
    <string name="title_activity_home">Home</string>
    <string name="change_password">Change password</string>
    <string name="notification_error_ssl_cert_invalid">SSL error occurred. Would you like to proceed?</string>
    <string name="action_loginfailed">There was a problem</string>
    <string name="action_loginfailed_description">The password you have entered is incorrect</string>
    <string name="action_loginfailed_no_user_exists_description">No account exists for the email address entered</string>
    <string name="ride_history_penalty_fees">Penalty Fees</string>
    <string name="report_damage">Report Damage</string>
    <string name="active_ride_menu_report_damage">REPORT\nDAMAGE</string>
    <string name="password">Password</string>
    <string name="submit_code">SUBMIT CODE</string>
    <string name="submit">SUBMIT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="label_create_account">Create account</string>
    <string name="show">SHOW</string>
    <string name="ok">OK</string>
    <string name="save">SAVE</string>
    <string name="notice">Notice</string>
    <string name="delete_account">Delete account</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DON\'T ACCEPT</string>
    <string name="termcondition">Terms &amp; condition</string>
    <string name="onboarding_log_in_question"><![CDATA[<font color=#FFFFFF>Already have an account?</font><font color=#00647C> Sign in</font>]]></string>
    <string name="password_update_success">You have successfully changed you password</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="incorrect_password">Wrong password</string>
    <string name="menu_open">open</string>
    <string name="menu_close">close</string>
    <string name="label_find_a_bike">FIND A BIKE</string>
    <string name="label_get_direction">GET DIRECTIONS</string>
    <string name="label_button_find_ride">Find bikes</string>
    <string name="end_trip_button_text">END MY RIDE</string>
    <string name="report_theft">REPORT THEFT</string>
    <string name="report_theft_small">Report Theft</string>
    <string name="route_to_bike_cancel_cancel">No, keep looking</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_history">Ride History</string>
    <string name="ride_in_progress">RIDE IN PROGRESS</string>
    <string name="bike_booking_time">TIME</string>
    <string name="ride_time">00:00</string>
    <string name="bike_booking_fare">FARE</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat new password</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="add_phone_number">ADD PHONE NUMBER</string>
    <string name="telephone">TELEPHONE</string>
    <string name="label_theft_reported_thanks">Thanks for letting us know.</string>
    <string name="label_theft_reported_no_payment_end_ride">End your ride</string>
    <string name="label_theft_reported_payment_end_ride">End your ride and pay</string>
    <string name="label_theft_reported_message">We\'ll be in touch if we need any more information from you</string>
    <string name="label_theft_reported">Theft has been reported</string>
    <string name="report_theft_title">You cannot find your ride anywhere?</string>
    <string name="report_theft_description">Reporting theft will end your ride</string>
    <string name="route_to_bike_button_start_ride">START RIDE</string>
    <string name="route_to_bike_start">Starting ride...</string>
    <string name="route_to_bike_button_connecting">CONNECTING</string>
    <string name="label_damage_bike_notes">Notes</string>
    <string name="label_damage_bike_category">Category</string>
    <string name="label_damage_bike_no_photo">No Photo</string>
    <string name="label_damage_bike_title">Check the details of your damage report and submit it when you\'re ready.</string>
    <string name="get_parking_route_text">Get directions to this parking spot</string>
    <string name="label_reserve">RESERVE</string>
    <string name="active_ride_ending_trip">Ending ride ...</string>
    <string name="bike_booking_cancelling_loader">Cancelling ride ...</string>
    <string name="end_ride_checklist_header_label">END MY RIDE</string>
    <string name="end_ride_checklist_checklist_label">END MY RIDE CHECKLIST</string>
    <string name="ride_summary_header_label">RIDE SUMMARY</string>
    <string name="end_ride_checklist_points"><![CDATA[<font color=\'#868686\'>1. Confirm you parked the bike in an authorized area according to the </font> <font color=\'##00AAD1\'>parking instructions</font>.</a> <br> <br> <font color=\'#868686\'>2. Confirm you locked the bike properly using the Ellipse.</font> <br> <font color=\'##00AAD1\'>Help with locking the Ellipse.</font> <br> <br><font color=\'#868686\'>3. Take a photo clearly showing the locked bike.</font><br><font color=\'##00AAD1\'> Show examples.</font>  ]]></string>
    <string name="end_ride_checklist_line1">Confirm you parked the bike in an authorized area.</string>
    <string name="end_ride_checklist_line2">Confirm you locked the bike properly.</string>
    <string name="end_ride_checklist_line3">Take a photo of your locked bike by clicking the button below.</string>
    <string name="label_damage_bike_photo_damage">Photo of damage</string>
    <string name="label_damage_bike_enter_notes">Tap to enter notes</string>
    <string name="title_activity_description">DAMAGE DETAILS</string>
    <string name="title_activity_damage">SUBMIT REPORT</string>
    <string name="label_describe_the_damage">Describe the damage</string>
    <string name="label_submit_damage">SUBMIT DAMAGE REPORT</string>
    <string name="label_save">SAVE</string>
    <string name="label_rate_ride">RATE YOUR RIDE</string>
    <string name="label_rate_ride_duration">Duration</string>
    <string name="label_cost_ride_free_default">FREE</string>
    <string name="label_cost_ride_unit">$</string>
    <string name="label_report_theft">REPORT\nTHEFT</string>
    <string name="label_reported_theft">THEFT REPORTED</string>
    <string name="ride_details_title">RIDE DETAILS</string>
    <string name="ride_cost_label_lowercase">Ride cost</string>
    <string name="thanks">Thanks</string>
    <string name="damage_report_success_description">What would you like to do now?</string>
    <string name="damage_report_success_continue">Continue my ride</string>
    <string name="damage_report_success_end_my_ride">End my ride</string>
    <string name="damage_report_success_find_bike">End my ride now &amp; find a new bike</string>
    <string name="active_ride_parkings_hint_title">WHERE CAN I PARK</string>
    <string name="active_ride_parkings_hint_text_1">You can park anywhere within parking zones or at any parking spots</string>
    <string name="active_ride_parkings_hint_text_2">Zoom out to see parking zones and parking spots</string>
    <string name="no_trip_history_yet">No trip history yet.</string>
    <string name="no_trip_history_description">Search for bikes near you and start riding.</string>
    <string name="active_ride_in_ride_with">Riding</string>
</resources>