<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:elevation="0dp"
    android:padding="18dp"
    android:background="@color/lattis_toolbar_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lattis.ellipse.presentation.ui.biketheft.ReportBikeTheft"
    tools:showIn="@layout/activity_report_bike_theft">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_layer_one"
        android:visibility="visible"
        >
    <com.lattis.ellipse.presentation.view.CustomTextView
        android:id="@+id/tv_report_theft_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_above="@+id/tv_report_theft_description"
        android:text="@string/report_theft_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/lattis_text_color_grey"
        />

    <com.lattis.ellipse.presentation.view.CustomTextView
        android:id="@+id/tv_report_theft_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_above="@+id/btn_report_theft"
        android:text="@string/report_theft_description"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/lattis_text_color_grey"
        />

    <com.lattis.ellipse.presentation.view.CustomButton
        android:id="@+id/btn_report_theft"
        style="@style/blueButtonStyle.rect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/report_theft"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        custom:typefaceAsset="SanFranciscoDisplay-Regular.otf" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_layer_two"
        android:visibility="gone"
        >
        <com.lattis.ellipse.presentation.view.CustomTextView
            android:id="@+id/label_theft_reported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/label_theft_reported"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_above="@+id/label_theft_reported_thanks"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/lattis_text_color_grey"
            />
        <com.lattis.ellipse.presentation.view.CustomTextView
            android:id="@+id/label_theft_reported_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/label_theft_reported_thanks"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lattis_text_color_grey"
            />
        <com.lattis.ellipse.presentation.view.CustomTextView
            android:id="@+id/label_theft_reported_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/label_theft_reported_thanks"
            android:text="@string/label_theft_reported_message"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lattis_text_color_grey"
            />

        <com.lattis.ellipse.presentation.view.CustomTextView
            android:id="@+id/label_theft_reported_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below="@+id/label_theft_reported_message"
            android:text="@string/label_theft_reported_no_payment_end_ride"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lattis_accent_color"
            />


    </RelativeLayout>

</RelativeLayout>
